--- a/config.env
+++ b/config.env
@@ -1,7 +1,5 @@
-# Only for docker and heroku
-
-BOT_TOKEN=12345:abcaskhdkqlwjgbdklajwbdliw
-SUDOERS=1243703097 1351353543
-NSFW_LOG_CHANNEL=-1001470187101
-SPAM_LOG_CHANNEL=-1001554591017
-ARQ_API_KEY=A54D655S4D654654D # Get it from @ARQRobot
+BOT_TOKEN=5271103233:AAHYLkpsYSQAhXu6Ccw-tAW_DBqBbKNDs5g
+SUDOERS=1840059606 1538405771
+NSFW_LOG_CHANNEL=-1001799411291
+SPAM_LOG_CHANNEL=-1001764710818
+ARQ_API_KEY=MYCKOB-KBXDTZ-OJMGBG-AVBUJK-ARQ
